Corrected the direction images shift in for triple view

--- a/react-app/src/components/css/Gallery.css
+++ b/react-app/src/components/css/Gallery.css
@@ -33,3 +33,11 @@
     justify-content: space-around;
     align-items: center;
 }
+
+#gallery-view-triple {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
